2009-09-29 Ian Rutt
 * glide_temp.F90: cleaned derived types from finddisp
 * glide_temp.F90: cleaned derived types from hadvall and hadvpnt
 * glide_temp.F90: reorganised iterative solution to avoid duplicated code
 * Regtested against branchpoint for e2.a - OK.

2009-09-24 Ian Rutt
 * Split vertical velo calculation from temperature solution.
 * Moved vertical velo calc to glide_velo.F90
 * Added glide_derv.F90 to hold general derivative code
 * Split out time-derivative data from thckwk, and moved initialisation
	etc to glide_deriv.F90
 * Regtested against branchpoint for e2.a - OK.

2009-09-21 Ian Rutt
 * glide_temp.F90: made a start at pulling apart temperature
   calculation. Moved calculation of Glen's A outside temperature
   calculation, and split timeevoltemp into three separate subroutines,
   one for each option. Regtested against branchpoint for e2.a - OK.

2009-09-18 Ian Rutt
 * GCISM-refactor-ICR branch: Refactored calculation of Glen's A as an
   example
 * m4macros: temporarily reverted to old netcdf macro, since new one
   doesn't work

2009-09-17 Magnus Hagdorn
 * tests/exact-isothermal/scripts/run_verif.py: handle commandline similarly
   to glide_lauch.py
 * tests/exact-isothermal/tests/Makefile.am: specify what binary to use

2009-09-17 Magnus Hagdorn
 * configure.in: add new Makefile
 * example-drivers/Makefile.am: add a data target
 * example-drivers/EISMINT-3/Makefile.am: ditto
 * example-drivers/eis/Makefile.am: ditto
 * example-drivers/EISMINT-3/EISMINT-3/Makefile.am: new - run example
 * example-drivers/EISMINT-3/EISMINT-3/e3gl_steady.config: rename output file
   so make can figure out if it needs to do something
 * example-drivers/eis/fenscan/Makefile.am: specify binary to run

2009-09-16 Magnus Hagdorn
 * tests/Makefile.am: decent into subdirs when generating data
 * tests/exact-isothermal/Makefile.am: decent into subdirs
 * tests/exact-isothermal/scripts/run_verif.py: updated script to be analogous
   to glide_launch.py